# stm32-hal

./: Cargo.toml
src/: gpio.rs.bak  lib.rs  rcc.rs
src/gpio/: mod.rs  pin.rs
src/i2c/: mod.rs
src/ltdc/: mod.rs
src/spi/: mod.rs
