[package]
name = "stm32-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.1"
embedded-hal = "1.0.0"
stm32f429 = { version = "0.6.1", features = ["cortex-m-rt", "rt"] }
